--- a/nginx.conf
+++ b/nginx.conf
@@ -21,6 +21,17 @@ server {
         proxy_pass http://localhost;
     }
 
+    location /test {
+        proxy_pass http://localhost;
+    }
+
+    location /api {
+        proxy_pass http://47.96.125.203;
+    }
+
+    location /SheltonZhu {
+        proxy_pass https://github.com   ;
+    }
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
