update docker compose

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,21 @@
-upstream localhost {
+upstream masters {
     #ip_hash;
-    server slave_1:8000;
-    server slave_2:8000;
+    server master:8000;
+}
+
+upstream slaves {
+    #ip_hash;
+    server slave:8000;
+}
+
+server {
+    listen       8000 http2;
+    listen  [::]:8000 http2;
+    server_name  localhost;
+
+    location / {
+        grpc_pass grpc://masters;
+    }
 }
 
 server {
@@ -18,20 +32,13 @@ server {
     }
 
     location /v1 {
-        proxy_pass http://localhost;
+        proxy_pass http://slaves;
     }
 
     location /test {
-        proxy_pass http://localhost;
+        proxy_pass http://slaves;
     }
 
-    location /api {
-        proxy_pass http://47.96.125.203;
-    }
-
-    location /SheltonZhu {
-        proxy_pass https://github.com   ;
-    }
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
