--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,50 +6,43 @@ services:
       target: prod
       context: ./
       dockerfile: Dockerfile
+    image: ${DOCKER_IMAGE_PREFIX}/app:${DOCKER_APP_TAG}
     command: /root/app -rpc=true -rpc_port=8000 -http=false
-    container_name: master
     environment:
       MYSQL: ${MYSQL}
-  slave_1:
-    image: ${CUSTOMIZE_NETWORK_NAME}_master
-    command: /root/app -master=master:8000
-    container_name: slave_1
     depends_on:
-      - master
+      - mysql
+    restart: always
+  slave:
+    image: ${DOCKER_IMAGE_PREFIX}/app:${DOCKER_APP_TAG}
+    command: /root/app -master=nginx:8000
     environment:
       CSRF_TOKEN_SECRET: ${CSRF_TOKEN_SECRET}
       SESSION_NAME: ${SESSION_NAME}
       SESSION_SECRET: ${SESSION_SECRET}
-  slave_2:
-    image: ${CUSTOMIZE_NETWORK_NAME}_master
-    command: /root/app -master=master:8000
-    container_name: slave_2
     depends_on:
       - master
-    environment:
-      CSRF_TOKEN_SECRET: ${CSRF_TOKEN_SECRET}
-      SESSION_NAME: ${SESSION_NAME}
-      SESSION_SECRET: ${SESSION_SECRET}
+    restart: always
   nginx:
     build:
       target: nginx
       context: ./
       dockerfile: Dockerfile
-    restart: always
-    container_name: nginx
+    image: ${DOCKER_IMAGE_PREFIX}/nginx:${DOCKER_APP_TAG}
     ports:
-    - "80:80"
-#  mysql:
-#    image: mysql
-#    container_name: mysql
-#    restart: always
-#    environment:
-#      MYSQL_ROOT_PASSWORD: woaiyao
-#      MYSQL_DATABASE: wordpress
-#      MYSQL_USER: wordpress
-#      MYSQL_PASSWORD: wordpress
-
-networks:
-  default:
-    external:
-      name: ${CUSTOMIZE_NETWORK_NAME}
+      - "80:80"
+    depends_on:
+      - master
+      - slave
+    restart: always
+  mysql:
+    image: mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: ${DOCKER_MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${DOCKER_MYSQL_DATABASE}
+      MYSQL_USER: ${DOCKER_MYSQL_USER}
+      MYSQL_PASSWORD: ${DOCKER_MYSQL_PASSWORD}
+    restart: always
+  redis:
+    image: redis:alpine
+    restart: always
