--- a/nginx.conf
+++ b/nginx.conf
@@ -32,6 +32,9 @@ server {
     }
 
     location /v1 {
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forward-For $remote_addr;
+        proxy_set_header X-real-ip $remote_addr;
         proxy_pass http://slaves;
     }
 
